# brewfather-mcp

./: .env.sample  .gitignore  .test.env  README.md  hello.py  pyproject.toml
.github/workflows/: python-app.yml
brewfather-mcp/: server.py
brewfather_mcp/: api.py  server.py  types.py  utils.py
src/: main.py
src/brewfather_mcp/: api.py  inventory.py  server.py  types.py  utils.py
tests/: conftest.py  test_brewfather_client.py  test_mcp_server.py  test_utils.py
tests/cassettes/: TestBrewfatherInventoryClient.test_get_fermentables_list.yaml  TestFermentables.test_get_fermentables_detail.yaml  TestFermentables.test_get_fermentables_list.yaml  TestHops.test_get_hop_detail.yaml  TestHops.test_get_hops_list.yaml  TestYeasts.test_get_yeast_detail.yaml  TestYeasts.test_get_yeasts_list.yaml
tests/tests/fixtures/vcr_cassettes/: fermentables_list.yaml
