[project]
name = "brewfather_mcp"
version = "0.0.2"
description = "Experimental MCP server that connections to Brewfather API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.5.0",
    "pydantic>=2.10.6",
    "pytest-cov>=6.0.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-dotenv>=0.5.2",
    "pytest-mock>=3.14.0",
    "pytest-vcr>=1.0.2",
    "vcrpy>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "src", "tests"
]
env_files= [".test.env"]

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN", "F722"]  

[tool.basedpyright]
ignore = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]


